<resources>
    <string name="app_name">Noted</string>
    <string name="search_here">Search here....</string>
    <string name="clear">clear</string>
    <string name="no_data">no_data</string>
    <string name="add_note">Add Note</string>
    <string name="choose_color">Choose Color</string>
    <string name="some_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
    </string>
    <string name="edited_on">Edited on: %1$s</string>

    <!--note-->
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="date_format">dd-mm-yy</string>

    <!--alert-->
    <string name="delete_note">Delete note</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="new_folder">New Folder</string>
    <string name="name">Name</string>

    <!--content description-->
    <string name="back_button">back button</string>
    <string name="save_button">save button</string>
    <string name="color_picker">color picker</string>
</resources>