<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ad_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailNoteActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ad_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_button"
        app:backgroundTint="@color/grey"
        app:borderWidth="0.1dp"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pressedTranslationZ="0dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ad_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/save_button"
        app:backgroundTint="@color/grey"
        app:borderWidth="0.1dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ad_back_button"
        app:pressedTranslationZ="0dp"
        app:srcCompat="@drawable/ic_baseline_check" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ad_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_back_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/ad_ed_note_title"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ad_ed_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/note_title"
                android:inputType="none"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner2" />

            <com.yahiaangelo.markdownedittext.MarkdownEditText
                android:id="@+id/ad_ed_note_content"
                android:layout_width="0dp"
                android:layout_height="620dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/note_content"
                android:inputType="none"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ad_ed_note_title"
                app:layout_constraintStart_toStartOf="@+id/ad_ed_note_title"
                app:layout_constraintTop_toBottomOf="@+id/ad_ed_note_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ad_color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/color_picker"
        app:backgroundTint="@color/grey"
        app:borderWidth="0.1dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="@+id/ad_save_button"
        app:pressedTranslationZ="0dp"
        app:srcCompat="@drawable/ic_baseline_color_lens_24" />

    <LinearLayout
        android:id="@+id/ad_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.yahiaangelo.markdownedittext.MarkdownStylesBar
            android:id="@+id/ad_style_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="5dp"
            android:padding="5dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>